# aws-rust-lambda-function-boilerplate

./: Cargo.toml  README.md  serverless.yml
src/: lib.rs  main.rs
src/common/: mod.rs  setup.rs  sqs.rs
src/models/: opt.rs
tests/: sqs_tests.rs
