[package]
name = "aws_rust_lambda_function_boilerplate"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]] 
name = "main"
path = "src/main.rs" 

[dependencies]
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.3.0" }
tokio = { version = "1.20.1", features = ["full"] }
clap = { version = "~4.4", features = ["derive"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
lambda_runtime = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.10.2"